<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App titles-->
    <string name="app_name" translatable="false">ACE</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Language">Language</string>
    <string name="Settings">Settings</string>
    <string name="CarDetail">Car Detail</string>
    <string name="AddHotspot">Add Hotspot</string>
    <string name="HotspotDetails">Details</string>

    <!--Buttons-->
    <string name="English" translatable="false">English</string>
    <string name="French" translatable="false">Français</string>
    <string name="PrivacyBttn">Privacy Policy</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>
    <string name="GetStarted">Get Started</string>
    <string name="VoiceSearch">Voice Search</string>
    <string name="Search">Search</string>
    <string name="Make">Make</string>
    <string name="Model">Model</string>
    <string name="Year">Year</string>
    <string name="AddVehicle">Add Vehicle</string>
    <string name="ListView">List View</string>
    <string name="Interior">Interior</string>
    <string name="Exterior">Exterior</string>
    <string name="Next">Next</string>
    <string name="Finish">Finish</string>

    <!--Content-->
    <string name="PrivacyPolicyContent">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway</string>
    <string name="SearchOnboarding">Use the ACE app to look up hotspots other BSOs have identified</string>
    <string name="CarOnboarding">Add Cars to the ACE database to help other BSOs search for contraband</string>
    <string name="Notes">Notes</string>
    <string name="NothingToDisplay">Nothing To Display</string>

    <string name="hotspot_detail_image"/>
    <string name="Login">Login</string>
    <string name="emailExample" translatable="false">email@canada.ca</string>
    <string name="sign_in">Sign In</string>
    <string name="emailHint" translatable="false">Email/PIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="steps_to_reproduce">Steps to Reproduce</string>
    <string name="hotspot_location">Hotspot Location</string>
    <string name="_1_of_1">1 of 1</string>
    <string name="One_of">1 of </string>
    <string name="One_of_Blank">1 of </string>


</resources>