<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:id="@+id/layout"
>

    <android.support.v7.widget.Toolbar
            android:id="@+id/imageViewToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/CBSA_Blue"
            app:titleTextColor="@android:color/white"
            app:title="@string/CarDetail"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <Button
                android:id="@+id/listViewBttn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/CBSA_Blue"
                android:textColor="@android:color/white"
                android:text="@string/ListView"
                android:layout_gravity="end"
                android:elevation="0dp"/>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="1dp"
            tools:layout_editor_absoluteX="8dp"
            android:layout_below="@+id/imageViewToolbar"
            android:background="@color/CBSA_Blue"
            app:tabTextColor="@android:color/white"
            android:elevation="4dp" app:tabIndicatorColor="@android:color/white">

        <android.support.design.widget.TabItem
                android:id="@+id/exteriorBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exterior"
        />

        <android.support.design.widget.TabItem
                android:id="@+id/interiorBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Interior"/>

    </android.support.design.widget.TabLayout>

    <ImageView
            android:id="@+id/imageViewE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabLayout"
            android:layout_alignParentBottom="true"
    />

    <ImageView
            android:id="@+id/hotspotImageViewE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabLayout"
            android:layout_alignParentBottom="true"
    />

    <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fab"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|end"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_margin="@dimen/fab_margin"-->
            <!--app:srcCompat="@drawable/pluswhite"-->
            <!--app:backgroundTint="@color/CBSA_Blue"/>-->

    <Button
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/AddHotspot"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/pluswhite"
            android:drawablePadding="20dp"
            android:padding="15dp"
            app:backgroundTint="@color/CBSA_Blue"
            android:background="@drawable/fabbttn"

    />



</RelativeLayout>