<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
>
    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/CBSA_Blue"
            app:titleTextColor="@android:color/white"
            app:title="@string/Search"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="0dp"
    >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/CBSA_Blue"
                android:textColor="@android:color/white"
                android:text="@string/AddVehicle"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
        />
    </android.support.v7.widget.Toolbar>

    <Button
            android:id="@+id/makeBttn"
            android:text="@string/Make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:textSize="20sp"
            android:layout_below="@id/my_toolbar"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/primary_text_light"
            android:layout_alignParentStart="true"
            android:drawableEnd="@drawable/carat"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"/>

    <TextView
            android:id="@+id/modelText"
            android:text="@string/Model"
            android:layout_width="70dp"
            android:layout_height="72dp"
            android:textSize="20sp"
            android:layout_below="@id/makeBttn"
            android:textColor="@android:color/primary_text_light"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/makeBttn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <Spinner
            android:id="@+id/modelSpinner"
            android:layout_width="284dp"
            android:layout_alignEnd="@id/modelText"
            android:layout_height="72dp"
            android:visibility="gone"
            android:layout_below="@id/makeBttn"
            android:layout_toEndOf="@id/modelText"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/modelText"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintVertical_bias="0.236"/>

    <TextView
            android:id="@+id/yearText"
            android:text="@string/Year"
            android:layout_width="70dp"
            android:layout_height="72dp"
            android:textSize="20dp"
            android:layout_below="@id/modelText"
            android:textColor="@android:color/primary_text_light"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/modelText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="284dp"
            android:layout_alignEnd="@id/yearText"
            android:layout_height="72dp"
            android:visibility="gone"
            android:layout_below="@id/modelSpinner"
            android:layout_toEndOf="@id/yearText"
            app:layout_constraintTop_toBottomOf="@+id/makeBttn" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/modelText"
            android:layout_marginStart="8dp" android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.135"/>

    <Button
            android:id="@+id/searchBttnE"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:background="@drawable/roundedbttn"
            android:textColor="#fff"
            android:enabled="false"
            android:layout_below="@id/yearText"
            android:layout_marginTop="268dp"
            android:layout_centerVertical="true" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" app:layout_constraintTop_toBottomOf="@+id/makeBttn"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
            android:id="@+id/progress_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" android:foregroundTint="@color/CBSA_Blue"
            android:backgroundTint="@color/CBSA_Blue"
            style="@style/Widget.AppCompat.ProgressBar"
            android:theme="@style/Base.Widget.AppCompat.ProgressBar" android:progressTint="@color/CBSA_Blue"
            android:progressDrawable="@color/CBSA_Blue"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/voiceBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:elevation="12dp"
            app:backgroundTint="@color/CBSA_Blue"
            android:src="@drawable/microphone"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>