<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="397dp"
                android:id="@+id/imageView2"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.157"
                android:src="@drawable/cbsalogo"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundgradient"
            android:orientation="vertical"
            android:gravity="center">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <EditText
                        android:textCursorDrawable="@drawable/color_cursor_white"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_profile"
                        android:hint="@string/emailHint"
                        android:textColorHint="@android:color/white"
                        android:inputType="text"
                        android:singleLine="true"
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:padding="10dp"
                        android:backgroundTint="@color/colorAccent1"/>

                <EditText
                        android:textCursorDrawable="@drawable/color_cursor_white"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:textColorHint="@android:color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:backgroundTint="@color/colorAccent1"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorFour"
                        android:text="@string/log_in"
                        android:id="@+id/loginBttn"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:textAllCaps="false"
                        android:textSize="21sp"
                        android:textColor="@android:color/white"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>