<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/CBSA_Blue"
            app:titleTextColor="@android:color/white"
            app:title="@string/HotspotDetails"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent">

        <Button
                android:id="@+id/finishBttn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/CBSA_Blue"
                android:textColor="@color/disabledButton"
                android:text="@string/Finish"
                android:layout_gravity="end"
                android:elevation="0dp"
                android:enabled="false"
        />
    </android.support.v7.widget.Toolbar>


    <ImageView
            android:src="@drawable/addpicture"
            android:id="@+id/hotspotDetailsImageView"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_below="@+id/toolbar"
            android:contentDescription="@string/hotspot_detail_image"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:id="@+id/hotspotDetailsImageViewSmallTL"
            android:src="@drawable/addpicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/toolbar"
            android:layout_toEndOf="@id/hotspotDetailsImageView"
            app:layout_constraintStart_toEndOf="@+id/hotspotDetailsImageView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.629"/>

    <ImageView
            android:id="@+id/hotspotDetailsImageViewSmallBL"
            android:src="@drawable/addpicturesmall"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_below="@+id/hotspotDetailsImageViewSmallTL"
            android:layout_toEndOf="@id/hotspotDetailsImageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/hotspotDetailsImageViewSmallBR"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageViewSmallTL"
            app:layout_constraintStart_toEndOf="@+id/hotspotDetailsImageView"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
    />

    <ImageView
            android:id="@+id/hotspotDetailsImageViewSmallTR"
            android:src="@drawable/addpicturesmall"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_below="@+id/toolbar"
            android:layout_toEndOf="@id/hotspotDetailsImageViewSmallTL"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
    />

    <ImageView
            android:id="@+id/hotspotDetailsImageViewSmallBR"
            android:src="@drawable/addpicturesmall"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_below="@+id/hotspotDetailsImageViewSmallTR"
            android:layout_toEndOf="@id/hotspotDetailsImageViewSmallBL"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageViewSmallTR"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/titleText"
            android:hint="@string/hotspot_location"
            android:maxLength="256"
            android:inputType="textShortMessage"
            android:backgroundTint="@color/CBSA_Blue"
            android:textColorLink="@color/CBSA_Blue"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_below="@+id/hotspotDetailsImageView"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/notesText"
            android:layout_below="@+id/titleText"
            android:hint="@string/steps_to_reproduce"

            android:gravity="start"
            android:textColorLink="@color/CBSA_Blue"
            android:textCursorDrawable="@drawable/color_cursor"
            android:backgroundTint="@color/CBSA_Blue"
            android:maxLines="3"
            android:maxLength="255"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.134"/>
    <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/microphone"
            android:id="@+id/floatingActionButton"
            app:backgroundTint="@color/CBSA_Blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>